<resources>
    <string name="app_name">Vi Flea Market</string>
    <string name="action_settings">Cài đặt</string>
    <string name="verify_note">Để có thể đăng bán và hơn thế nữa, \n vui lòng đăng nhập bằng số điện thoại di động của bạn.</string>
    <string name="code_instructions">Thông tin của bạn sẽ luôn được bảo mật.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Đăng ký</string>
    <string name="products_are_selling">Sản phẩm đang bán</string>
    <string name="favorite_product">Sản phẩm yêu thích</string>
    <string name="setting">Cài đặt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="invalid_verification_code">Mã xác minh không hợp lệ</string>
    <string name="log_in">Đăng nhập</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="guest">Guest</string>
    <string name="no_information">Chưa có thông tin</string>
    <string name="communicate">Communicate</string>
    <string name="share">Chia sẻ ứng dụng</string>
    <string name="vote_app">Đánh gia ứng dụng</string>
    <string name="search_here">Tìm kiếm tại đây</string>
    <string name="sell_your_products">Đăng bán sản phẩm</string>
    <string name="log_in_with_mobile_number">Đăng nhập bằng số điện thoại</string>
    <string name="verification_code">Mã xác minh</string>
    <string name="please_type_the_verification_code_sent_to_your_phone">Vui lòng nhập mã xác minh được gửi đến điện thoại của bạn.</string>
    <string name="did_not_receive_the_code">Bạn không nhận được mã?</string>
    <string name="name">Họ tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="save">Lưu lại</string>
    <string name="no_selected_photo">Chưa chọn hình ảnh.</string>
    <string name="cancel">Hủy</string>
    <string name="post">Đăng</string>
    <string name="you_need_to_post_at_least_1_photo">Bạn cần đăng ít nhất một ảnh</string>
    <string name="product_type">Loại sản phẩm</string>
    <string name="product_s_name">Tên sản phẩm</string>
    <string name="province">Khu vực</string>
    <string name="district">Quận huyện</string>
    <string name="price">Giá</string>
    <string name="note">Thông tin chi tiết</string>
    <string name="call">Gọi điện</string>
    <string name="send">Nhắn tin</string>
    <string name="time_location">Thời gian | Khu vực</string>
    <string name="_400_000">400.000 đ</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="user_name">Người bán</string>
    <string name="position">Khu vực</string>
    <string name="skip">Bỏ qua</string>
    <string name="iphone_6s">Iphone 6s</string>
    <string name="_1_000_000">1.000.000 đ</string>
    <string name="_11_10_qu_n_ho_ng_mai">11:10 | Quận Hoàng Mai</string>
    <string name="VND">đ</string>
    <string name="space"> | </string>
    <string name="danh_muc">Danh mục</string>
    <string name="loai_san_pham">Loại sản phẩm</string>
    <string name="khu_vuc">Khu vực</string>
    <string name="quan_huyen">Quận, huyện</string>
    <string name="hinh_anh">Hình ảnh</string>
    <string name="can_dang_it_nhat_1_anh">Bạn cần đăng ít nhất một hình</string>
    <string name="chup_them_hinh">Chụp thêm hình để bán chạy hơn</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="infor_add_image">* Hình thật của sản phẩm sẽ tạo được niềm tin với người xem\n
        * Hình chụp từ nhiều góc độ của sản phẩm \n
        * Hình chụp cận cảnh những điểm nổi bật của sản phẩm\n
        * Nên chụp rõ những điểm lưu ý của sản phẩm (VD: Vết xước nếu có..)\n
        * Dung lượng ảnh không được quá 5Mb</string>
    <string name="gia">Giá</string>
    <string name="nhap_gia">Nhập giá tiền tại đây</string>
    <string name="dong">đ</string>
    <string name="gia_infor">*  Đa phần người xem sẽ không liên lạc khi bài đăng không có giá hoặc giá không hợp lý\n
            *  Vì vậy hãy điền tổng giá tiền bằng VNĐ</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="tieu_de_infor">Điền tiêu đề rõ ràng để gây ấn tượng với người xem tin</string>
    <string name="tieu_de_infor_2">* Nên dùng tiếng Việt có dấu.\n* Nêu ngắn gọn tên sản phẩm cùng tình trạng.</string>
    <string name="mo_ta">Mô tả chi tiết</string>
    <string name="mo_ta_chi_tiet_infor">Mô tả chi tiết (10-200 từ) bằng tiếng Việt để nêu rõ thông tin của sản phẩm cần đăng bán. Nhằm thu hút hơn số lượng người liên lạc.</string>
    <string name="nhap_lai_gia">Đề nghị nhập lại giá</string>
    <string name="nhap_tieu_de">Hãy nhập tiêu đề để bán hàng tốt hơn</string>
    <string name="nhap_mo_ta">Hãy nhập mô tả chi tiết</string>
    <string name="xem_lai">Xem lại bài đăng</string>
    <string name="do_dien_tu">Đồ điện tử</string>
    <string name="chua_co_thong_tin">Chưa có thông tin</string>
    <string name="dang_ban">Đăng bán sản phẩm</string>
    <string name="v1_000_000">1.000.000 đ</string>
    <string name="defauft_infor">11:10 | Quận Hoàng Mai</string>
    <string name="chua_chon_anh">Chưa chọn hình ảnh nào!</string>
    <string name="khong_the_chon_anh">Không thể chọn ảnh!</string>
    <string name="them_anh">Hãy thêm ảnh cho sản phẩm!</string>
    <string name="hay_nhap_tieu_de">Hãy nhập tiêu đề!</string>
    <string name="hay_nhap_gia">Hãy nhập giá!</string>
    <string name="hay_nhap_mo_ta">Hãy nhập mô tả sản phẩm!</string>
    <string name="hay_chon_danh_muc">Hãy chọn danh mục!</string>
    <string name="hay_chon_khu_vuc">Hãy chọn khu vực!</string>
    <string name="hay_them_anh">Hãy thêm ảnh cho sản phẩm</string>
    <string name="tim_kiem">Tìm kiếm sản phẩm</string>
    <string name="xe_co">Xe cộ</string>
    <string name="viec_lam">Việc làm và dịch vụ</string>
    <string name="thoi_trang">Thời trang</string>
    <string name="me_be">Mẹ và bé</string>
    <string name="noi_that">Nội ngoại thất, Đồ gia dụng</string>
    <string name="giai_tri_the_thao">Giải trí, Thể thao, Sở thích</string>
    <string name="do_van_phong">Đồ văn phòng</string>
    <string name="loai_khac">Loại khác</string>
    <string name="thu_cung">Thú cưng</string>
    <string name="rate">Làm ơn đánh giá 5* để ủng hộ nhà phát triển</string>
    <string name="not_now">Thoát</string>
    <string name="rate_now">Đánh giá</string>
    <string name="rate_app">Đánh giá</string>
    <string name="tim_kiem_2">Tìm kiếm</string>
    <string name="must_dang_nhap">Cần đăng nhập để có thể đăng bán sản phẩm</string>
    <string name="request_permistion">Cần quyền đọc dữ liệu từ bộ nhớ để sử dụng tính năng đăng ảnh</string>
    <string name="can_dang_nhap">Bạn chưa đăng nhập nên không thể sử dụng tính năng</string>
    <string name="tiep_tuc_tin_chua_xong">Tiếp tục với tin chưa viết xong</string>
    <string name="infor_tiep_tuc_dialog">Bạn có thể tiếp tục tin đang viết hoặc hủy bỏ rạo một tin mới</string>
    <string name="tao_moi">Tạo mới</string>
    <string name="laptop_dell_vostro_15">Laptop Dell Vostro 15</string>
    <string name="dang_huan">Đăng Huân</string>
    <string name="ho_ng_mai">Quận Hoàng Mai</string>
    <string name="demo_mo_ta">Máy còn mới nguyên, vừa mới đập hộp cách đây 15 ngày, Không có nhu cầu dùng nữa nên bán</string>
    <string name="san_pan_da_dang">Sản phẩm đã đăng</string>
    <string name="da_duyet">Đã duyệt</string>
    <string name="chua_duyet">Chưa duyệt</string>
    <string name="canh_bao">Cảnh báo</string>
    <string name="thuc_su_xoa">Bạn có thực sự muốn xóa?</string>
    <string name="xoa">Xóa</string>
</resources>
