<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_sell"
            android:title="@string/products_are_selling" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_care"
            android:title="@string/favorite_product" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_vote"
                android:icon="@drawable/ic_vote"
                android:title="@string/vote_app" />
        </menu>
    </item>

</menu>
