<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:paddingStart="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="72dp"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/img_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_temp" />

            <TextView
                android:id="@+id/tv_trang_thai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/da_duyet"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/iphone_6s"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/v1_000_000"
                android:textColor="#d42626"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_price"
                android:maxLines="1"
                android:text="@string/defauft_infor"
                android:textColor="@color/colorTextItem"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:src="@drawable/ic_delete" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>