<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haui.huantd.vifleamarket.activities.AddProductActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorBg">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="#45a39a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_post"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="36dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/post"
            android:textAllCaps="true"
            android:textColor="#45a39a"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/background_infor2"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/img_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_image2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/you_need_to_post_at_least_1_photo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stroke"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_add_image"
        android:background="@color/colorStroke"
        android:orientation="horizontal"></LinearLayout>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stroke"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edt"
        android:hint="@string/product_s_name"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edt"
        android:hint="@string/price"
        android:padding="8dp"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edt_price">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/scrollView2"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorStroke"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/sp_type"
                android:gravity="center_vertical"
                android:text="@string/product_type"
                android:textColor="@color/colorTextItem"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"></Spinner>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorStroke"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/sp_province"
                android:gravity="center_vertical"
                android:text="@string/province"
                android:textColor="@color/colorTextItem"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/sp_province"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"></Spinner>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorStroke"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/sp_district"
                android:gravity="center_vertical"
                android:text="@string/district"
                android:textColor="@color/colorTextItem"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/sp_district"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"></Spinner>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/ed_note"
            android:gravity="center_vertical"
            android:text="@string/note"
            android:textColor="@color/colorTextItem"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/ed_note"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_editext"
            android:gravity="left|top"></EditText>
    </LinearLayout>

</RelativeLayout>
