<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.list_activity_add_product.GiaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/width_img_button"
            android:layout_height="@dimen/height_img_button"
            android:padding="12dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gia"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_title" />

        <ImageView
            android:id="@+id/btn_show"
            android:layout_width="@dimen/width_img_button"
            android:layout_height="@dimen/height_img_button"
            android:padding="10dp"
            android:src="@drawable/ic_xem_lai" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/gia" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_cancel"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/nhap_gia"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_d"
                android:padding="4dp"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tv_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:text="@string/dong"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_add_image_infor"
            android:padding="16dp"
            android:text="@string/gia_infor" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:text="@string/tiep_tuc"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>